Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Feed server : Erlang Social Feeds and Cache Server" />
+    <meta name="description" content="Feed Server : Erlang Social Feeds and Cache Server" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Feed server</title>
+    <title>Feed Server</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/synrc/feed_server">View on GitHub</a>
 
-          <h1 id="project_title">Feed server</h1>
+          <h1 id="project_title">Feed Server</h1>
           <h2 id="project_tagline">Erlang Social Feeds and Cache Server</h2>
 
             <section id="downloads">
@@ -68,7 +68,7 @@ You could create your own workers based on consumer behavior provided by Feed Se
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Feed server maintained by <a href="https://github.com/synrc">synrc</a></p>
+        <p class="copyright">Feed Server maintained by <a href="https://github.com/synrc">synrc</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
