Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/synrc/feed_server">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/synrc/feeds">View on GitHub</a>
 
           <h1 id="project_title">Feed Server</h1>
           <h2 id="project_tagline">Erlang Social Feeds and Cache Server</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/synrc/feed_server/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/synrc/feed_server/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/synrc/feeds/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/synrc/feeds/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
