--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section>
         <figure>
         <code>
- $ wscat --no-check -c wss://chat-2.n2o.space:8042
+ $ wscat --no-check -c wss://chat-2.n2o.space:8042/ws
         </code>
         </figure>
         </section>
@@ -68,7 +68,7 @@
        for demo purposes and doesn't support file upload and voice calls.
      </p>
     <figure><code>
- $ wscat --no-check -c wss://chat-2.n2o.space:8042
+ $ wscat --no-check -c wss://chat-2.n2o.space:8042/ws
  > HELP
  < AUTH &lt;user&gt;
  | SEND &lt;user&gt; &lt;msg&gt;
