--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section>
         <figure>
         <code>
- $ wscat --no-check -c wss://chat-2.n2o.space:8042/ws
+ $ wscat -c wss://n2o.im
         </code>
         </figure>
         </section>
