--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 <nav>
     <a href='https://n2o.space'>SPACE</a>
-    <a href='https://chat.n2o.space' style="background:#ededed;">CHAT</a>
+    <a href='https://chat.o7.network' style="background:#ededed;">CHAT</a>
 </nav>
 <header>
-    <a href="https://github.com/synrc/chat"><img src="https://synrc.space/images/Synrc Neo.svg?v=1"></a>
+    <a href="https://github.com/o7/chat"><img src="https://synrc.space/images/Synrc Neo.svg?v=1"></a>
     <h1>CHAT</h1>
 </header>
 <aside>
