--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <nav>
-    <a href='https://n2o.space'>SPACE</a>
+    <a href='https://o7.network'>SPACE</a>
     <a href='https://chat.o7.network' style="background:#ededed;">CHAT</a>
 </nav>
 <header>
-    <a href="https://github.com/o7/chat"><img src="https://synrc.space/images/Synrc Neo.svg?v=1"></a>
+    <a href="https://github.com/o7/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200&v=4"></a>
     <h1>CHAT</h1>
 </header>
 <aside>
