--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav>
-    <a href='https://o7.network'>SPACE</a>
+    <a href='https://o7.network'>O7</a>
     <a href='https://chat.o7.network' style="background:#ededed;">CHAT</a>
 </nav>
 <header>
