--- a/index.html
+++ b/index.html
@@ -1,51 +1,28 @@
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="Maxim Sokhatsky" />
-    <title>CHAT</title>
-    <link rel="stylesheet" href="https://synrc.space/synrc.css?v=2" />
-</head>
-<body>
-<nav>
-    <a href='https://o7.network'>O7</a>
-    <a href='https://chat.o7.network' style="background:#ededed;">CHAT</a>
-</nav>
-<header>
-    <a href="https://github.com/o7/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200&v=4"></a>
+<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="" /><meta name="author" content="Maxim Sokhatsky" /><title>CHAT</title><link rel="stylesheet" href="https://synrc.space/synrc.css?v=2" /></head><body><nav>
+    <a href="https://o7.network">O7</a>
+    <a href="https://chat.o7.network" style="background:#ededed;">CHAT</a>
+</nav><header>
+    <a href="https://github.com/o7/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200" /></a>
     <h1>CHAT</h1>
-</header>
-<aside>
+</header><aside>
     <article>
         <section>
             <h3>SYNOPSIS</h3>
             <div>CHAT is a simple mailbox delivery system consists of:</div>
             <div>
-                 <ul>
-                 <li>SYN for publish-subscribe message queue;
-                 <li>N2O for protocols;</li>
-                 <li>KVX for data storage;</li>
-                 <li>and COWBOY for the web server.</li>
-             </div>
+                 <ul><li>SYN for publish-subscribe message queue;
+                 </li><li>N2O for protocols;</li><li>KVX for data storage;</li><li>and COWBOY for the web server.</li></ul></div>
                 <div>
              CHAT uses WebSocket server and BER/BERT/TXT channel formatters.</div>
 
         </section>
         <section>
             <h3><a href="https://n2o.dev">MODULES</a></h3>
-            <div><ul>
-           <li><a href="man/chat_txt.htm">TXT</a></font></li>
-           <li><a href="man/chat_ber.htm">BER</a></font></li>
-           <li><a href="man/chat.htm">CHAT</a></font></li>
-           <li><a href="man/chat_server.htm">SERVER</a></font></li>
-           <li><a href="man/csr.htm">CSR</a></font></li>
-            </ul></div>
-            <br>
+            <div><ul><li><a href="man/chat_txt.htm">TXT</a></li><li><a href="man/chat_ber.htm">BER</a></li><li><a href="man/chat.htm">CHAT</a></li><li><a href="man/chat_server.htm">SERVER</a></li><li><a href="man/csr.htm">CSR</a></li></ul></div>
+            <br />
             <div>
-                APR 2019 &copy; <a href="https://github.com/5HT">5HT</a>
-                                <a href="https://github.com/proger">proger</a> ISC<br>
+                APR 2019 © <a href="https://github.com/5HT">5HT</a>
+                                <a href="https://github.com/proger">proger</a> ISC<br />
                 VER 3.4
             </div>
         </section>
@@ -57,8 +34,7 @@
         </figure>
         </section>
     </article>
-</aside>
-<main>
+</aside><main>
     <section>
 
     <h3>TXT PROTO</h3>
@@ -70,39 +46,39 @@
     <figure><code>
  $ wscat --no-check -c wss://chat-2.n2o.space:8042/ws
  > HELP
- < AUTH &lt;user&gt;
+ &lt; AUTH &lt;user&gt;
  | SEND &lt;user&gt; &lt;msg&gt;
  | BOX
  | CUT &lt;id&gt;.
  > AUTH maxim
- < USER maxim
+ &lt; USER maxim
  > SEND vlad HELO
- < ERROR user doesn't exist.
+ &lt; ERROR user doesn't exist.
  > AUTH vlad
- < USER vlad
+ &lt; USER vlad
  > SEND maxim OK
- < NOTIFY vlad:maxim:1556151953113322286:OK
- < ACK "1556151953113322286"
+ &lt; NOTIFY vlad:maxim:1556151953113322286:OK
+ &lt; ACK "1556151953113322286"
  > AUTH maxim
- < USER maxim
+ &lt; USER maxim
  > BOX
- < LIST
+ &lt; LIST
  vlad:maxim:1556151953113322286:OK
  > SEND maxim this is me
- < NOTIFY maxim:maxim:1556152151055371152:this is me
- < ACK "1556152151055371152"
+ &lt; NOTIFY maxim:maxim:1556152151055371152:this is me
+ &lt; ACK "1556152151055371152"
  > SEND maxim back again
- < NOTIFY maxim:maxim:1556152157283311935:back again
- < ACK "1556152157283311935"
+ &lt; NOTIFY maxim:maxim:1556152157283311935:back again
+ &lt; ACK "1556152157283311935"
  > BOX
- < LIST
+ &lt; LIST
  vlad:maxim:1556151953113322286:OK
  maxim:maxim:1556152151055371152:this is me
  maxim:maxim:1556152157283311935:back again
  > CUT 1556152157283311935
- < ERASED 3
+ &lt; ERASED 3
  > BOX
- < LIST
+ &lt; LIST
  >
     </code></figure>
     </section>
@@ -136,15 +112,12 @@
     </section>
     <section>
        <h3>APP SPEC</h3>
-        <p><table cellspacing=10 valign=center><tr><td>
-        <img src="https://n2o.space/img/pdf.jpg" width=35 style="margin-bottom:-12px;margin-right:10px;">
-        <a href="doc/GUI.pdf">GUI.PDF</a></td></tr></table></p>
-        <br>
+        <p></p><table cellspacing="10" valign="center"><tbody><tr><td>
+        <img src="https://n2o.space/img/pdf.jpg" width="35" style="margin-bottom:-12px;margin-right:10px;" />
+        <a href="doc/GUI.pdf">GUI.PDF</a></td></tr></tbody></table>
+        <br />
 
     </section>
-</main>
-<footer>
+</main><footer>
     Made with <span class="heart">❤</span> to N2O
-</footer>
-</body>
-</html>
+</footer></body></html>
