--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
     </section>
     <section>
        <h3>APP SPEC</h3>
-        <p></p><table cellspacing="10" valign="center"><tbody><tr><td>
+        <p><table cellspacing="10" valign="center"><tbody><tr><td>
         <img src="https://n2o.space/img/pdf.jpg" width="35" style="margin-bottom:-12px;margin-right:10px;" />
-        <a href="doc/GUI.pdf">GUI.PDF</a></td></tr></tbody></table>
+        <a href="https://chat.n2o.space/doc/GUI.pdf">GUI.PDF</a></td></tr></tbody></table>
         <br />
-
+       </p>
     </section>
 </main><footer>
     Made with <span class="heart">❤</span> to N2O
