--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="" /><meta name="author" content="Maxim Sokhatsky" /><title>CHAT</title><link rel="stylesheet" href="https://synrc.space/synrc.css?v=2" /></head><body><nav>
+<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="" />
+<meta name="author" content="Maxim Sokhatsky" /><title>CHAT</title>
+    <link rel="stylesheet" href="https://n2o.dev/blank.css" />
+    <link rel="stylesheet" href="https://n2o.dev/zima.css" />
+</head><body><nav>
     <a href="https://o7.network">O7</a>
     <a href="https://chat.o7.network" style="background:#ededed;">CHAT</a>
 </nav><header>
