--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
                  <ul><li>SYN for publish-subscribe message queue;
                  </li><li>N2O for protocols;</li><li>KVX for data storage;</li><li>and COWBOY for the web server.</li></ul></div>
                 <div>
-             CHAT uses WebSocket server and BER/BERT/TXT channel formatters.</div>
+             CHAT uses WebSocket server and BER/BERT/TXT channel formatters.</div><br/>
 
         <figure>
-        <code>
- $ wscat -c wss://n2o.im
-        </code>
+        <code> $ wscat -c wss://n2o.im</code>
         </figure>
         </section>
         <section>
