--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://n2o.dev/blank.css" />
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
 </head><body><nav>
-    <a href="https://o7.network">O7</a>
+    <a href="https://erp.uno">ERP</a>
     <a href="https://chat.o7.network" style="background:#ededed;">CHAT</a>
 </nav><header>
     <a href="https://github.com/o7/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200" /></a>
