--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
 </head><body><nav>
     <a href="https://erp.uno">ERP</a>
-    <a href="https://chat.o7.network" style="background:#ededed;">CHAT</a>
+    <a href="https://chat.erp.uno" style="background:#ededed;">CHAT</a>
 </nav><header>
-    <a href="https://github.com/o7/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200" /></a>
+    <a href="https://github.com/erpuno/chat"><img src="https://crm.erp.uno/img/logo.svg" /></a>
     <h1>CHAT</h1>
 </header><aside>
     <article>
