--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        for demo purposes and doesn't support file upload and voice calls.
      </p>
     <figure><code>
- $ wscat --no-check -c wss://chat-2.n2o.space:8042/ws
+ $ wscat --no-check -c wss://chat-2.n2o.dev:8042/ws
  > HELP
  &lt; AUTH &lt;user&gt;
  | SEND &lt;user&gt; &lt;msg&gt;
@@ -116,8 +116,8 @@
     <section>
        <h3>APP SPEC</h3>
         <p><table cellspacing="10" valign="center"><tbody><tr><td>
-        <img src="https://n2o.space/img/pdf.jpg" width="35" style="margin-bottom:-12px;margin-right:10px;" />
-        <a href="https://chat.n2o.space/doc/GUI.pdf">GUI.PDF</a></td></tr></tbody></table>
+        <img src="https://n2o.dev/img/pdf.jpg" width="35" style="margin-bottom:-12px;margin-right:10px;" />
+        <a href="https://chat.n2o.dev/priv/doc/GUI.pdf">GUI.PDF</a></td></tr></tbody></table>
         <br />
        </p>
     </section>
