--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="https://erp.uno">ERP</a>
     <a href="https://chat.erp.uno" style="background:#ededed;">CHAT</a>
 </nav><header>
-    <a href="https://github.com/erpuno/chat"><img src="https://crm.erp.uno/img/logo.svg" /></a>
+    <a href="https://github.com/erpuno/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200" /></a>
     <h1>CHAT</h1>
 </header><aside>
     <article>
