--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <meta name="author" content="Maxim Sokhatsky" /><title>CHAT</title>
     <link rel="stylesheet" href="https://n2o.dev/blank.css" />
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
+    <link rel="stylesheet" href="https://n2o.dev/pro/pro.css" />
 </head><body><nav>
     <a href="https://erp.uno">ERP</a>
     <a href="https://chat.erp.uno" style="background:#ededed;">CHAT</a>
 </nav><header>
-    <a href="https://github.com/erpuno/chat"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200" /></a>
+    <a href="https://github.com/synrc/ca"><img src="https://avatars.githubusercontent.com/u/4131155?s=400&u=5e1fb3f98771143ec08d91485e5a274ab60a5960&v=4" /></a>
     <h1>CHAT</h1>
 </header><aside>
     <article>
