--- a/man/csr.htm
+++ b/man/csr.htm
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
 </head><body><nav>
     <a href="https://n2o.dev">SPACE</a>
-    <a href="https://chat.n2o.dev">CHAT</a>
+    <a href="https://mail.n2o.dev">MAIL</a>
     <a href="#" style="background:#ededed;">CSR</a>
 </nav><header>
     <a href="../index.html"><img src="https://n2o.dev/img/Synrc Neo.svg" /></a>
