--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
     <link rel="stylesheet" href="https://n2o.dev/pro/pro.css" />
 </head><body><nav>
-    <a href="https://erp.uno">ERP</a>
+    <a href="https://erp.uno/en/">ERP</a>
     <a href="https://mail.erp.uno" style="background:#ededed;">MAIL</a>
 </nav><header>
     <a href="https://github.com/synrc/ca"><img src="https://avatars.githubusercontent.com/u/4131155?s=400&u=5e1fb3f98771143ec08d91485e5a274ab60a5960&v=4" /></a>
