--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href="https://erp.uno/en/">ERP</a>
     <a href="https://mail.erp.uno" style="background:#ededed;">MAIL</a>
 </nav><header>
-    <a href="https://github.com/synrc/ca"><img src="https://avatars.githubusercontent.com/u/4131155?s=400&u=5e1fb3f98771143ec08d91485e5a274ab60a5960&v=4" /></a>
+    <a href="https://github.com/synrc/mail"><img src="https://openmoji.org/data/color/svg/2709.svg" /></a>
     <h1>MAIL</h1>
 </header><aside>
     <article>
