--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
     <link rel="stylesheet" href="https://n2o.dev/pro/pro.css" />
 </head><body><nav>
-    <a href="https://erp.uno">DEV</a>
+    <a href="https://erp.uno/en/">DEV</a>
     <a href="https://mail.n2o.dev" style="background:#ededed;">MAIL</a>
 </nav><header>
     <a href="https://github.com/synrc/mail"><img src="https://openmoji.org/data/color/svg/2709.svg" /></a>
