--- a/man/ipms.htm
+++ b/man/ipms.htm
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://n2o.dev/zima.css" />
     <link rel="stylesheet" href="https://n2o.dev/pro/pro.css" />
 </head><body><nav>
-    <a href="https://erp.uno">ERP</a>
+    <a href="https://erp.uno/en/">ERP</a>
     <a href="https://mail.erp.uno">MAIL</a>
     <a href="#" style="background:#ededed;">IPMS</a>
 </nav><header>
